--- a/cassandra/cassandra.html
+++ b/cassandra/cassandra.html
@@ -16,6 +16,10 @@
         <input type="password" id="node-config-input-password">
     </div>
     <div class="form-row">
+        <label for="node-config-input-localDataCenter"><i class="fa fa-database"></i> Local Data Center</label>
+        <input type="text" id="node-config-input-localDataCenter">
+    </div>
+    <div class="form-row">
         <label for="node-config-input-keyspace"><i class="fa fa-database"></i> Keyspace</label>
         <input type="text" id="node-config-input-keyspace">
     </div>
@@ -26,8 +30,9 @@
         category: 'config',
         defaults: {
             hosts: {value:"127.0.0.1",required:true},
-            port: {value:"9042",required:true},
-            keyspace: {value:"",required:true}
+            port: {value:"",required:false},
+            keyspace: {value:"",required:true},
+            localDataCenter: {value:"",required:false}
         },
         credentials: {
             user: {type: "text"},
